crates/tribute-front/tests/snapshots/block_scope__block_let_binding_accessible_inside.snap
---
source: crates/tribute-front/tests/block_scope.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @example() -> core.i32 convention(cps) {
      %0 = arith.const {value = 42} : core.i32
      tribute_control.return %0
  }
}
