crates/tribute-front/tests/snapshots/block_scope__block_with_case_pattern_binding.snap
---
source: crates/tribute-front/tests/block_scope.rs
expression: ir_text
---
core.module @test {
  !Option = adt.enum<{name = @Option, variants = [[@Some, [tribute_rt.anyref]], [@None, []]]}>

  tribute_control.func @example(%0: adt.typeref<{name = @Option}>) -> core.i32 convention(direct) {
      %1 = adt.variant_is %0 {tag = @Some, type = !Option} : core.i1
      %2 = scf.if %1 : core.i1 {
          %3 = adt.variant_cast %0 {tag = @Some, type = !Option} : !Option
          %4 = adt.variant_get %3 {field = 0, tag = @Some, type = !Option} : tribute_rt.anyref
          %5 = arith.const {value = true} : core.i1
          scf.yield %5
      } {
          %6 = arith.const {value = false} : core.i1
          scf.yield %6
      }
      %7 = scf.if %2 : core.i32 {
          %8 = adt.variant_cast %0 {tag = @Some, type = !Option} : !Option
          %9 = adt.variant_get %8 {field = 0, tag = @Some, type = !Option} : tribute_rt.anyref
          %10 = core.unrealized_conversion_cast %9 : core.i32
          scf.yield %10
      } {
          %11 = adt.variant_cast %0 {tag = @None, type = !Option} : !Option
          %12 = arith.const {value = 0} : core.i32
          scf.yield %12
      }
      tribute_control.return %7
  }
}
