crates/tribute-front/tests/snapshots/block_scope__nested_blocks_separate_scopes.snap
---
source: crates/tribute-front/tests/block_scope.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @example() -> core.i32 convention(cps) {
      %0 = arith.const {value = 1} : core.i32
      %1 = arith.const {value = 2} : core.i32
      tribute_control.return %1
  }
}
