crates/tribute-front/tests/snapshots/block_scope__outer_scope_accessible_in_inner_block.snap
---
source: crates/tribute-front/tests/block_scope.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @example() -> core.i32 convention(direct) {
      %0 = arith.const {value = 10} : core.i32
      tribute_control.return %0
  }
}
